small alignment fix.

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 .visualCaptcha { margin-bottom:0}
-.visualCaptcha-explanation,.accessibility-description { background-color:inherit; color: inherit; font-size:inherit;text-align:inherit  }
+.visualCaptcha-explanation,.accessibility-description { background-color:inherit; color: inherit; font-size:inherit;text-align:inherit; padding:10px 0;  }
 .visualCaptcha-possibilities .img { border:1px;  }
 .visualCaptcha-possibilities {  border-radius:4px; background:#fff; border:1px solid #ccc; box-shadow: inset 0 1px 1px rgba(0,0,0,.075); }
 .visualCaptcha-refresh-button, .visualCaptcha-accessibility-button { color: #333; background-color: #fff; border-color: #ccc; }
